# CAD

./: Agents.md  Cargo.toml  LICENSE  README.md  git
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml  release-windows-slint.yml  release-windows-truck-slint.yml  release-windows.yml
bevy_pmetra/: Cargo.toml
bevy_pmetra/src/: lib.rs
cad_import/: Cargo.toml
cad_import/src/: instrument.rs  lib.rs
pipe_network/: Cargo.toml
pipe_network/src/: lib.rs
slint_bevy_example/: Cargo.toml
slint_bevy_example/src/: main.rs  slint_bevy_adapter.rs  web_asset.rs
survey_cad/: Cargo.toml
survey_cad/examples/: parametric_box.rs
survey_cad/src/: alignment.rs  corridor.rs  crs.rs  dtm.rs  gis.rs  grip.rs  intersection.rs  layers.rs  lib.rs  lidar.rs  local_grid.rs  parcel.rs  pmetra.rs  point_database.rs  qa.rs  reporting.rs  sheet.rs  snap.rs  styles.rs  subassembly.rs  superelevation.rs  truck_integration.rs  variable_offset.rs  workspace.rs
survey_cad/src/geometry/: dimension.rs  line.rs  line3.rs  mod.rs  point.rs  point3.rs
survey_cad/src/io/: e57.rs  fgdb.rs  ifc.rs  kml.rs  landxml.rs  las.rs  mod.rs  project.rs  shp.rs
survey_cad/src/render/: mod.rs
survey_cad/src/surveying/: adjustment.rs  code_library.rs  cogo.rs  field_code.rs  least_squares.rs  mod.rs  observation_db.rs  point_db.rs  stakeout.rs
survey_cad/tests/: corridor_cut_fill.rs  corridor_station_volumes.rs  corridor_volume.rs  cross_section_sheet.rs  crs.rs  format_dms.rs  intersection.rs  layers_styles.rs  lsq.rs  network_adjust.rs  shp_records.rs  shp_roundtrip.rs  shp_z.rs  stakeout.rs  superelevation.rs  variable_offset.rs
survey_cad_cli/: Cargo.toml
survey_cad_cli/src/: main.rs
survey_cad_cli/src/commands/: mod.rs
survey_cad_cli/tests/: cli.rs
survey_cad_gui/: Cargo.toml
survey_cad_gui/src/: main.rs
survey_cad_python/: Cargo.toml  README.md
survey_cad_python/src/: lib.rs
survey_cad_slint_gui/: Cargo.toml  README.md
survey_cad_slint_gui/src/: bevy_adapter.rs  main.rs  workspace3d.rs
survey_cad_slint_gui/ui/: main.slint
survey_cad_truck_gui/: Cargo.toml  README.md  build.rs
survey_cad_truck_gui/examples/: line_style_manager.rs
survey_cad_truck_gui/src/: main.rs  persistence.rs  snap.rs  truck_backend.rs
survey_cad_truck_gui/ui/: cross_section_viewer.slint  entity_inspector.slint  layer_manager.slint  line_style_manager.slint  main.slint  point_manager.slint  superelevation_editor.slint
truck-master/resources/shape/: large-torus.json
truck-master/truck-geotrait/src/algo/: curve.rs  surface.rs
truck-master/truck-geotrait/tests/: curve.rs  polynomial.rs
truck-master/truck-platform/src/: lib.rs  scene.rs
truck-master/truck-platform/tests/: bindgroup.rs  common.rs  msaa.rs  wgsl-utils.rs
truck-master/truck-rendimpl/examples/: bsp-animation.rs
truck-master/truck-rendimpl/tests/: common.rs  microfacet.rs  polygon_bind_group.rs  render.rs
truck_cad_engine/: Cargo.toml
truck_cad_engine/src/: lib.rs
