[package]
name = "slint_bevy_example"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", rev = "939d605e0688b7ea4cb6e3a5b3f40d918a60a5db", features = ["unstable-wgpu-24"] }
spin_on = "0.1"
bevy = { version = "0.16", default-features = false, features = ["bevy_core_pipeline", "bevy_pbr", "bevy_window", "bevy_scene", "bevy_gltf", "bevy_log", "jpeg", "png", "tonemapping_luts", "multi_threaded"] }
smol = "2.0"
async-compat = "0.2.4"
reqwest = { version = "0.12", features = ["stream"] }
