[package]
name = "survey_cad"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_sprite", "x11"], optional = true }
bevy_editor_cam = { version = "0.5", optional = true }
bevy_picking = { version = "0.15", features = ["bevy_mesh_picking_backend"], optional = true }
bevy_pmetra = { path = "../bevy_pmetra", optional = true }
truck-modeling = "0.6"
truck-topology = "0.6"
truck-geometry = "0.5"
delaunator = "1"
cdt = "0.1"
roxmltree = "0.20"
proj = "0.30"
shapefile = { version = "0.7", optional = true }
las = { version = "0.9", optional = true }
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
tempfile = "3.10"
fresnel = "0.1"

[features]
default = []
render = ["dep:bevy", "dep:bevy_editor_cam", "dep:bevy_picking"]
pmetra = ["render", "bevy/bevy_pbr", "dep:bevy_pmetra"]
shapefile = ["dep:shapefile"]
las = ["dep:las"]
