[package]
name = "survey_cad"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
geojson = "0.24"
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_sprite", "x11"], optional = true }
bevy_editor_cam = { version = "0.5", optional = true }
bevy_picking = { version = "0.15", features = ["bevy_mesh_picking_backend"], optional = true }
bevy_pmetra = { path = "../bevy_pmetra", optional = true }
bevy_gizmos = { version = "0.15", optional = true }
truck-modeling = "0.6"
truck-topology = "0.6"
truck-geometry = "0.5"
delaunator = "1"
cdt = "0.1"
roxmltree = "0.20"
proj = { version = "0.30", default-features = false }
proj-sys = { version = "0.26", features = ["bundled_proj"] }
shapefile = { version = "0.7", optional = true }
las = { version = "0.9", optional = true }
kml = { version = "0.9", features = ["zip", "geo-types"], optional = true }
e57 = { version = "0.11", optional = true }
gdal = { version = "0.18", optional = true }
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
tempfile = "3.10"
fresnel = "0.1"
uuid = { version = "1", optional = true }
genpdf = { version = "0.2", optional = true }
umya-spreadsheet = { version = "1.1", optional = true }
geo-types = "0.7"

[dev-dependencies]
assert_fs = "1"
predicates = "2"

[features]
default = []
render = ["dep:bevy", "dep:bevy_editor_cam", "dep:bevy_picking", "dep:bevy_gizmos"]
pmetra = ["render", "bevy/bevy_pbr", "dep:bevy_pmetra"]
shapefile = ["dep:shapefile"]
las = ["dep:las"]
kml = ["dep:kml"]
fgdb = ["dep:gdal"]
e57 = ["dep:e57", "dep:uuid"]
reporting = ["dep:genpdf", "dep:umya-spreadsheet"]
network = ["proj/network"]
