[package]
name = "survey_cad_cli"
version = "0.1.0"
edition = "2021"


[dependencies]
survey_cad = { path = "../survey_cad", default-features = false }
clap = { version = "4", features = ["derive"] }
cad_import = { path = "../cad_import" }
pipe_network = { path = "../pipe_network" }

[features]
default = ["render"]
render = ["survey_cad/render"]
shapefile = ["survey_cad/shapefile"]
las = ["survey_cad/las"]
kml = ["survey_cad/kml"]
fgdb = ["survey_cad/fgdb"]
e57 = ["survey_cad/e57"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
