[package]
name = "survey_cad_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_sprite", "x11", "bevy_ui", "bevy_pbr"] }
survey_cad = { path = "../survey_cad", features = ["shapefile"] }
rfd = "0.15"
clap = { version = "4", features = ["derive"] }

