[package]
name = "survey_cad_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_winit", "bevy_sprite", "x11", "bevy_ui", "bevy_pbr", "tonemapping_luts"] }
survey_cad = { path = "../survey_cad" }
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
bevy_editor_cam = "0.5"
bevy_gizmos = "0.15"
log = "0.4"
env_logger = "0.10"


[features]
shapefile = ["survey_cad/shapefile"]
