[package]
name = "survey_cad_slint_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", rev = "939d605e0688b7ea4cb6e3a5b3f40d918a60a5db", features = ["unstable-wgpu-24"] }
survey_cad = { path = "../survey_cad" }
rfd = "0.15"
tiny-skia = "0.11"
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_window",
    "bevy_scene",
    "bevy_gltf",
    "jpeg",
    "png",
    "tonemapping_luts",
    "multi_threaded"
] }
bevy_editor_cam = "0.5"
spin_on = "0.1"
smol = "2.0"

[features]
default = []
shapefile = ["survey_cad/shapefile"]
las = ["survey_cad/las"]
kml = ["survey_cad/kml"]
fgdb = ["survey_cad/fgdb"]
e57 = ["survey_cad/e57"]
