[package]
name = "survey_cad_truck_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", rev = "939d605e0688b7ea4cb6e3a5b3f40d918a60a5db", features = ["unstable-wgpu-24"] }
i-slint-common = { git = "https://github.com/slint-ui/slint", rev = "939d605e0688b7ea4cb6e3a5b3f40d918a60a5db" }
survey_cad = { path = "../survey_cad" }
rfd = "0.15"
tiny-skia = "0.11"
truck_cad_engine = { path = "../truck_cad_engine" }
truck-modeling = { path = "../truck-master/truck-modeling" }
once_cell = "1"
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"

[build-dependencies]
slint-build = "1"

[features]
default = []
shapefile = ["survey_cad/shapefile"]
las = ["survey_cad/las"]
kml = ["survey_cad/kml"]
fgdb = ["survey_cad/fgdb"]
e57 = ["survey_cad/e57"]
