[package]
name = "truck_cad_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
truck-modeling = { path = "../truck-master/truck-modeling" }
truck-topology = { path = "../truck-master/truck-topology" }
truck-geometry = { path = "../truck-master/truck-geometry" }
truck-platform = { path = "../truck-master/truck-platform" }
truck-meshalgo = { path = "../truck-master/truck-meshalgo", features = ["tessellation"] }
truck-rendimpl = { path = "../truck-master/truck-rendimpl" }
slint = { git = "https://github.com/slint-ui/slint", rev = "939d605e0688b7ea4cb6e3a5b3f40d918a60a5db", features = ["unstable-wgpu-24"] }
pollster = "0.3"
